Further AB Testing

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -708,7 +708,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='ab_test'></a>\n",
+    "#### <a id='ab_test'></a>\n",
     "### Part II - A/B Test\n",
     "\n",
     "Notice that because of the time stamp associated with each event, you could technically run a hypothesis test continuously as each observation was observed.  \n",
@@ -725,7 +725,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Put your answer here.**"
+    "**Null-hypothesis**\n",
+    "$H_0:  p_{new} - p_{old} \\leq 0$"
    ]
   },
   {
