Added Hypothesis to AB Testing part

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -143,14 +143,14 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('C:\\\\Users\\\\infom\\\\Documents\\\\GitHub\\\\AB_testing\\\\ab_data.csv')\n",
-    "df.head(5)"
+    "df.head()"
    ]
   },
   {
@@ -726,7 +726,19 @@
    "metadata": {},
    "source": [
     "**Null-hypothesis**\n",
-    "$H_0:  p_{new} - p_{old} \\leq 0$"
+    " $H_0:  p_{new} - p_{old} \\leq 0$\n",
+    " \n",
+    " Which means that the difference between the total population conversion rates of the people with respect to old page and new page is equal to zero ( Which means the conversion rates for the both the page is same) or less than zero which means ( Conversion rate of the people with respect to new age is ittle more)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Alternative -hypothesis**\n",
+    " $H_1:  p_{new} - p_{old} > 0$\n",
+    " \n",
+    "which means that the difference between conversion rate of population with respect to new page and old page is greater than zero which means the conversion rate with respect to new page is greater than old page."
    ]
   },
   {
