AB test results

--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
        "4   864975  2017-01-21 01:52:26.210827    control     old_page          1"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
        "294478"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "290584"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "0.11965919355605512"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "3893"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
        "9   839785  2017-01-15 18:11:06.610965  treatment     new_page          1"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
        "290584"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
        "Name: user_id, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -543,13 +543,33 @@
        "2893   773192  2017-01-14 02:55:59.590927  treatment     new_page          0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df2[df2.duplicated('user_id')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2893]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.index[df2['user_id'].duplicated()==True].tolist()"
    ]
   },
   {
@@ -561,22 +581,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(290583, 5)"
+       "(290584, 5)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2 = df2.drop(df2['user_id']==773192)\n",
+    "df2 = df2.drop(df2.index[2893])\n",
     "df2.shape"
    ]
   },
@@ -591,16 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.11959749882133504"
+       "0.11959667567149027"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,12 +783,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11959708724499628"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_new = df2['converted'].mean()\n",
+    "p_new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -779,12 +811,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11959708724499628"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_old = df2['converted'].mean()\n",
+    "p_old"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -795,12 +839,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145310"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_new = df2[df2['group']=='treatment'].shape[0]\n",
+    "n_new"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -811,12 +867,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "145274"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_old = df2[df2['group']=='control'].shape[0]\n",
+    "n_old"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -827,12 +895,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 87,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_page_converted = np.random.binomial(n_new,p_new)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -843,12 +911,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 88,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "old_page_converted = np.random.binomial(n_old,p_old)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -859,12 +927,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0012437924379843923"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_page_converted/n_new - old_page_converted/n_old"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -875,12 +954,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "p_diffs = []\n",
+    "for i in range(10000):\n",
+    "    new_page_converted = np.random.binomial(n_new,p_new)\n",
+    "    old_page_converted = np.random.binomial(n_old,p_old)\n",
+    "    diff = new_page_converted/n_new - old_page_converted/n_old\n",
+    "    p_diffs.append(diff)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -891,12 +977,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYAAAAD8CAYAAAB+UHOxAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAELhJREFUeJzt3X+snmV9x/H3Z1QwmzqKFNa1zYqm\nSwZ/DFmDLO4PFjYosAD+YQLJtEGTmgwSzVyWKn9gNCSo80fIHKZqY8lQZFNjA92wEhdjMn4UhvwQ\nWY9Q5dgO6jDoYuKC++6P56o8bc/peU7Pec5zyvV+JU+e+/ne133f13315HzO/etpqgpJUn9+Y9Id\nkCRNhgEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6tSKSXfgWE4//fRav379pLsh\nSSeUhx566CdVtWqudss6ANavX8+ePXsm3Q1JOqEk+eEo7TwFJEmdMgAkqVMGgCR1ygCQpE4ZAJLU\nKQNAkjplAEhSpwwASeqUASBJnVrWTwJLc1m/9e6JbXvfzZdPbNvSYvAIQJI6ZQBIUqcMAEnqlAEg\nSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOuWTwNJxmtRTyD6BrMXiEYAkdcoAkKROGQCS1CkDQJI6\nZQBIUqfmDIAk65J8K8mTSZ5I8p5W/2CSHyd5pL0uG1rm/UmmkjyV5JKh+qZWm0qydTy7JEkaxSi3\ngb4EvK+qHk7yWuChJLvbvE9W1d8NN05yNnA1cA7wu8A3k/x+m/1p4M+BaeDBJDur6nuLsSOSpPmZ\nMwCq6gBwoE3/PMmTwJpjLHIlcEdV/RJ4JskUcH6bN1VVTwMkuaO1NQAkaQLmdQ0gyXrgTcD9rXR9\nkkeTbE+ystXWAM8OLTbdarPVj9zGliR7kuw5ePDgfLonSZqHkQMgyWuArwDvraqfAbcCbwTOZXCE\n8PFDTWdYvI5RP7xQta2qNlbVxlWrVo3aPUnSPI30VRBJXsXgl//tVfVVgKp6bmj+Z4G72sdpYN3Q\n4muB/W16trokaYmNchdQgM8DT1bVJ4bqq4eavRV4vE3vBK5OckqSs4ANwAPAg8CGJGclOZnBheKd\ni7MbkqT5GuUI4C3A24HHkjzSah8ArklyLoPTOPuAdwNU1RNJ7mRwcfcl4Lqq+hVAkuuBe4CTgO1V\n9cQi7oskaR5GuQvoO8x8/n7XMZa5CbhphvquYy0nSVo6PgksSZ0yACSpUwaAJHXKAJCkThkAktQp\nA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIA\nJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkTs0ZAEnWJflW\nkieTPJHkPa1+WpLdSfa295WtniS3JJlK8miS84bWtbm135tk8/h2S5I0l1GOAF4C3ldVfwBcAFyX\n5GxgK3BvVW0A7m2fAS4FNrTXFuBWGAQGcCPwZuB84MZDoSFJWnpzBkBVHaiqh9v0z4EngTXAlcCO\n1mwHcFWbvhK4rQbuA05Nshq4BNhdVS9U1U+B3cCmRd0bSdLI5nUNIMl64E3A/cCZVXUABiEBnNGa\nrQGeHVpsutVmq0uSJmDkAEjyGuArwHur6mfHajpDrY5RP3I7W5LsSbLn4MGDo3ZPkjRPIwVAklcx\n+OV/e1V9tZWfa6d2aO/Pt/o0sG5o8bXA/mPUD1NV26pqY1VtXLVq1Xz2RZI0D6PcBRTg88CTVfWJ\noVk7gUN38mwGvj5Uf0e7G+gC4MV2iuge4OIkK9vF34tbTZI0AStGaPMW4O3AY0keabUPADcDdyZ5\nF/Aj4G1t3i7gMmAK+AVwLUBVvZDkw8CDrd2HquqFRdkLSdK8zRkAVfUdZj5/D3DRDO0LuG6WdW0H\nts+ng5Kk8fBJYEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdGuW7\ngKQ5rd9696S7IGmePAKQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS\n1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktSpOQMgyfYkzyd5fKj2wSQ/TvJI\ne102NO/9SaaSPJXkkqH6plabSrJ18XdFkjQfoxwBfAHYNEP9k1V1bnvtAkhyNnA1cE5b5h+SnJTk\nJODTwKXA2cA1ra0kaULm/E/hq+rbSdaPuL4rgTuq6pfAM0mmgPPbvKmqehogyR2t7ffm3WNJ0qJY\nyDWA65M82k4RrWy1NcCzQ22mW222+lGSbEmyJ8megwcPLqB7kqRjmfMIYBa3Ah8Gqr1/HHgnkBna\nFjMHTc204qraBmwD2Lhx44xtpJ6t33r3xLa97+bLJ7ZtLb7jCoCqeu7QdJLPAne1j9PAuqGma4H9\nbXq2uiRpAo7rFFCS1UMf3wocukNoJ3B1klOSnAVsAB4AHgQ2JDkryckMLhTvPP5uS5IWas4jgCRf\nAi4ETk8yDdwIXJjkXAancfYB7waoqieS3Mng4u5LwHVV9au2nuuBe4CTgO1V9cSi740kaWSj3AV0\nzQzlzx+j/U3ATTPUdwG75tU7SdLY+CSwJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAk\nqVMGgCR1ygCQpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6\nZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOjVnACTZnuT5JI8P1U5LsjvJ3va+\nstWT5JYkU0keTXLe0DKbW/u9STaPZ3ckSaMa5QjgC8CmI2pbgXuragNwb/sMcCmwob22ALfCIDCA\nG4E3A+cDNx4KDUnSZMwZAFX1beCFI8pXAjva9A7gqqH6bTVwH3BqktXAJcDuqnqhqn4K7OboUJEk\nLaHjvQZwZlUdAGjvZ7T6GuDZoXbTrTZbXZI0IYt9ETgz1OoY9aNXkGxJsifJnoMHDy5q5yRJLzve\nAHiundqhvT/f6tPAuqF2a4H9x6gfpaq2VdXGqtq4atWq4+yeJGkuxxsAO4FDd/JsBr4+VH9Huxvo\nAuDFdoroHuDiJCvbxd+LW02SNCEr5mqQ5EvAhcDpSaYZ3M1zM3BnkncBPwLe1prvAi4DpoBfANcC\nVNULST4MPNjafaiqjrywLElaQnMGQFVdM8usi2ZoW8B1s6xnO7B9Xr2TJI2NTwJLUqcMAEnqlAEg\nSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKnDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLU\nKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAkdcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnq1IpJd0CL\na/3WuyfdBUknCI8AJKlTBoAkdWpBAZBkX5LHkjySZE+rnZZkd5K97X1lqyfJLUmmkjya5LzF2AFJ\n0vFZjCOAP62qc6tqY/u8Fbi3qjYA97bPAJcCG9prC3DrImxbknScxnEK6EpgR5veAVw1VL+tBu4D\nTk2yegzblySNYKEBUMA3kjyUZEurnVlVBwDa+xmtvgZ4dmjZ6VY7TJItSfYk2XPw4MEFdk+SNJuF\n3gb6lqran+QMYHeS7x+jbWao1VGFqm3ANoCNGzceNV+StDgWdARQVfvb+/PA14DzgecOndpp78+3\n5tPAuqHF1wL7F7J9SdLxO+4ASPJbSV57aBq4GHgc2Alsbs02A19v0zuBd7S7gS4AXjx0qkiStPQW\ncgroTOBrSQ6t54tV9a9JHgTuTPIu4EfA21r7XcBlwBTwC+DaBWxb0gRM6knzfTdfPpHtvtIddwBU\n1dPAH85Q/2/gohnqBVx3vNuTJC0unwSWpE4ZAJLUKQNAkjplAEhSpwwASeqUASBJnTIAJKlTBoAk\ndcoAkKROGQCS1CkDQJI6ZQBIUqcMAEnqlAEgSZ0yACSpUwaAJHXKAJCkThkAktQpA0CSOmUASFKn\nDABJ6tSKSXfglWj91rsn3QVJmpNHAJLUKQNAkjrlKSBJy94kT6vuu/nyiW173DwCkKROGQCS1CkD\nQJI6teQBkGRTkqeSTCXZutTblyQNLGkAJDkJ+DRwKXA2cE2Ss5eyD5KkgaW+C+h8YKqqngZIcgdw\nJfC9cWzMB7IkaXZLHQBrgGeHPk8Db17iPkjSyCb1h+RS3H661AGQGWp1WINkC7ClffyfJE+NvVdH\nOx34yQS2uxw5FodzPF7mWBxuUccjH1nQ4r83SqOlDoBpYN3Q57XA/uEGVbUN2LaUnTpSkj1VtXGS\nfVguHIvDOR4vcywOdyKOx1LfBfQgsCHJWUlOBq4Gdi5xHyRJLPERQFW9lOR64B7gJGB7VT2xlH2Q\nJA0s+XcBVdUuYNdSb3eeJnoKaplxLA7neLzMsTjcCTceqaq5W0mSXnH8KghJ6lRXAZDktCS7k+xt\n7ytnabe5tdmbZPNQ/Y+SPNa+xuKWJDliub9JUklOH/e+LNS4xiLJx5J8P8mjSb6W5NSl2qf5mutr\nSZKckuTLbf79SdYPzXt/qz+V5JJR17mcLfZ4JFmX5FtJnkzyRJL3LN3eLMw4fjbavJOS/EeSu8a/\nFyOoqm5ewEeBrW16K/CRGdqcBjzd3le26ZVt3gPAHzN4nuFfgEuHllvH4OL2D4HTJ72vkxoL4GJg\nRZv+yEzrXQ4vBjch/AB4A3Ay8F3g7CPa/BXwmTZ9NfDlNn12a38KcFZbz0mjrHO5vsY0HquB81qb\n1wL/eSKMxzjGYmi5vwa+CNw16f2sqr6OABh87cSONr0DuGqGNpcAu6vqhar6KbAb2JRkNfC6qvr3\nGvxL3nbE8p8E/pYjHmxbxsYyFlX1jap6qS1/H4NnPZajX38tSVX9L3Doa0mGDY/RPwMXtSOdK4E7\nquqXVfUMMNXWN8o6l6tFH4+qOlBVDwNU1c+BJxl8G8ByN46fDZKsBS4HPrcE+zCS3gLgzKo6ANDe\nz5ihzUxfV7GmvaZnqJPkCuDHVfXdcXR6TMYyFkd4J4Ojg+Votn2bsU0LtReB1x9j2VHWuVyNYzx+\nrZ0ieRNw/yL2eVzGNRafYvBH4v8tfpePzyvuv4RM8k3gd2aYdcOoq5ihVrPVk/xmW/fFI65/ySz1\nWByx7RuAl4DbR9zWUptzH47RZrb6TH9QnShHhOMYj8FCyWuArwDvraqfHXcPl86ij0WSvwCer6qH\nkly4wP4tmldcAFTVn802L8lzSVZX1YF2GuP5GZpNAxcOfV4L/Furrz2ivh94I4Nzfd9t10HXAg8n\nOb+q/msBu7JgExiLQ+veDPwFcFE7RbQczfm1JENtppOsAH4beGGOZeda53I1lvFI8ioGv/xvr6qv\njqfri24cY3EFcEWSy4BXA69L8o9V9Zfj2YURTfoixFK+gI9x+IXPj87Q5jTgGQYXPVe26dPavAeB\nC3j5wudlMyy/jxPjIvBYxgLYxODrvVdNeh/n2P8VDC5qn8XLF/rOOaLNdRx+oe/ONn0Oh1/oe5rB\nhcM517lcX2MajzC4PvSpSe/fpMfiiGUvZJlcBJ54B5b4H/b1wL3A3vZ+6JfZRuBzQ+3eyeDizRRw\n7VB9I/A4gyv7f097kO6IbZwoATCWsWjtngUeaa/PTHpfjzEGlzG4M+UHwA2t9iHgijb9auCf2j49\nALxhaNkb2nJPcfjdYEet80R5LfZ4AH/C4LTIo0M/D0f90bQcX+P42Riav2wCwCeBJalTvd0FJElq\nDABJ6pQBIEmdMgAkqVMGgCR1ygCQpE4ZAJLUKQNAkjr1/4gw4feSovc9AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x16520a34cf8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.hist(p_diffs);"
+   ]
   },
   {
    "cell_type": "markdown",
