--- a/Analyze_ab_test_results_notebook.ipynb
+++ b/Analyze_ab_test_results_notebook.ipynb
@@ -1962,7 +1962,17 @@
     "\n",
     "So from the overall analysis we can say that the Dataset was enough to perform the required analysis, and from the test conditions we found that there are 50% percent chances of getting either the old or the new page, ans so we ca conclude that the null hypothesis we considered stands true in above case and we dont have enough evidence to reject the null hypothesis, which means that the new page company has launched performed worst when compared to the old page. \n",
     "\n",
-    "So overall I think company should first consider the factors which have more impact on the page and design the new page considering them as building blocks, and before launching the page make sure the page has all the most impacting things presented in a better way.\n"
+    "So overall I think company should first consider the factors which have more impact on the page and design the new page considering them as building blocks, and before launching the page make sure the page has all the most impacting things presented in a better way.\n",
+    "\n",
+    "### Resources used \n",
+    "\n",
+    "\n",
+    "[comprehensive-guide-regression](https://www.analyticsvidhya.com/blog/2015/08/comprehensive-guide-regression/)\n",
+    "\n",
+    "[data-science-ipython-notebooks](https://github.com/donnemartin/data-science-ipython-notebooks)\n",
+    "\n",
+    "[adventures-in-statistics-2](http://blog.minitab.com/blog/adventures-in-statistics-2/regression-analysis-how-to-interpret-the-constant-y-intercept)\n",
+    "\n"
    ]
   }
  ],
